agora sim esta tudo bem

--- a/Computcao Evolutiva/Projeto_02/main.ipynb
+++ b/Computcao Evolutiva/Projeto_02/main.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.11.6)\n",
+      "pygame 2.5.2 (SDL 2.28.3, Python 3.11.6)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# env, env_name, gamma, qnet, qnet_lr, target_qnet, target_update_freq, replay_size, batch_size, epsilon_f, epsilon_decay_period, NUM_STAPS\n",
-    "def treinamento_Foda(env, rede_neural_hidden, geracoes, n_por_geracao, n_selecionados = 2, pais = False, learning_rate = 0.001):\n",
+    "def treinamento_Foda(env, rede_neural_hidden, geracoes, n_por_geracao, n_selecionados = 2, pais = False, learning_rate = 0.001, objetivo = 500):\n",
     "    \n",
     "    if isinstance(env, str):\n",
     "        env = gym.make(env)\n",
@@ -136,6 +136,7 @@
     "\n",
     "    lista_geracional = []\n",
     "    recompencas = []\n",
+    "    contador_recompencas = 0\n",
     "\n",
     "    for geracao in range(1,geracoes+1):\n",
     "        contador = 0\n",
@@ -145,6 +146,9 @@
     "            modelo_final, passos, recompensa_total = joga_jogo(env, especime_network)\n",
     "            lista_geracional.append([modelo_final, recompensa_total])\n",
     "            recompencas.append(recompensa_total)\n",
+    "\n",
+    "            if recompensa_total == objetivo:\n",
+    "                contador_recompencas += 1\n",
     "            # print(f'Geração: {geracao}/{geracoes}, Individuo: {contador}/{n_por_geracao}, Recompença: {recompensa_total}')\n",
     "    \n",
     "        pais_selecionados = seleciona_pais(lista_geracional, n_selecionados)\n",
@@ -154,6 +158,9 @@
     "            individuos = computacao_evolutiva_mutador_Cpais(n_por_geracao, pais_selecionados, learning_rate)\n",
     "        else:\n",
     "            individuos = computacao_evolutiva_mutador_Spais(n_por_geracao, pais_selecionados, learning_rate)\n",
+    "        \n",
+    "        if contador_recompencas >= 2:\n",
+    "            break\n",
     "    \n",
     "    for especime_network in individuos:\n",
     "        contador += 1\n",
@@ -163,47 +170,47 @@
     "        recompencas.append(recompensa_total)\n",
     "        selecao_final = seleciona_pais(lista_geracional, 1)\n",
     "        \n",
-    "    return selecao_final[0]"
+    "    return selecao_final[0], obs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Geração: 1/10, Recompensa: [57.0, 55.0, 23.0]\n",
-      "Geração: 2/10, Recompensa: [338.0, 113.0, 69.0]\n",
-      "Geração: 3/10, Recompensa: [338.0, 296.0, 210.0]\n",
-      "Geração: 4/10, Recompensa: [500.0, 338.0, 296.0]\n",
-      "Geração: 5/10, Recompensa: [500.0, 500.0, 355.0]\n",
-      "Geração: 6/10, Recompensa: [500.0, 500.0, 500.0]\n",
-      "Geração: 7/10, Recompensa: [500.0, 500.0, 500.0]\n",
-      "Geração: 8/10, Recompensa: [500.0, 500.0, 500.0]\n",
-      "Geração: 9/10, Recompensa: [500.0, 500.0, 500.0]\n",
-      "Geração: 10/10, Recompensa: [500.0, 500.0, 500.0]\n"
+     "ename": "TypeError",
+     "evalue": "hidden_size should be of type int, got: list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m env \u001b[38;5;241m=\u001b[39m gym\u001b[38;5;241m.\u001b[39mmake(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCartPole-v1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m rede_melhor \u001b[38;5;241m=\u001b[39m \u001b[43mtreinamento_Foda\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43menv\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrede_neural_hidden\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m36\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m36\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgeracoes\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_por_geracao\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_selecionados\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpais\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobjetivo\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m500\u001b[39;49m\n\u001b[0;32m     11\u001b[0m \u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[6], line 13\u001b[0m, in \u001b[0;36mtreinamento_Foda\u001b[1;34m(env, rede_neural_hidden, geracoes, n_por_geracao, n_selecionados, pais, learning_rate, objetivo)\u001b[0m\n\u001b[0;32m     10\u001b[0m output_dim \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39mn  \u001b[38;5;66;03m# Número de ações possíveis no ambiente MountainCar-v0\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m indi \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_por_geracao):\n\u001b[1;32m---> 13\u001b[0m     individuos\u001b[38;5;241m.\u001b[39mappend(\u001b[43mSimpleLSTM\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrede_neural_hidden\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_dim\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     15\u001b[0m lista_geracional \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m recompencas \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[1;32mc:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Computcao Evolutiva\\Projeto_02\\redes_neurais\\rede_MLP.py:29\u001b[0m, in \u001b[0;36mSimpleLSTM.__init__\u001b[1;34m(self, input_dim, hidden_dim, output_dim)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28msuper\u001b[39m(SimpleLSTM, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_dim \u001b[38;5;241m=\u001b[39m hidden_dim\n\u001b[1;32m---> 29\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlstm \u001b[38;5;241m=\u001b[39m \u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLSTM\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_first\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mLinear(hidden_dim, output_dim)\n",
+      "File \u001b[1;32mc:\\Users\\Pichau\\anaconda3\\envs\\rl23\\Lib\\site-packages\\torch\\nn\\modules\\rnn.py:771\u001b[0m, in \u001b[0;36mLSTM.__init__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    770\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 771\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLSTM\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Pichau\\anaconda3\\envs\\rl23\\Lib\\site-packages\\torch\\nn\\modules\\rnn.py:88\u001b[0m, in \u001b[0;36mRNNBase.__init__\u001b[1;34m(self, mode, input_size, hidden_size, num_layers, bias, batch_first, dropout, bidirectional, proj_size, device, dtype)\u001b[0m\n\u001b[0;32m     82\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdropout option adds dropout after all but last \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     83\u001b[0m                   \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecurrent layer, so non-zero dropout expects \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     84\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_layers greater than 1, but got dropout=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdropout\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     85\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_layers=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_layers\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(hidden_size, \u001b[38;5;28mint\u001b[39m):\n\u001b[1;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhidden_size should be of type int, got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(hidden_size)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m hidden_size \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     90\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhidden_size must be greater than zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: hidden_size should be of type int, got: list"
      ]
     }
    ],
    "source": [
     "env = gym.make(\"CartPole-v1\")\n",
-    "rede_melhor = treinamento_Foda(\n",
+    "rede_melhor, obs = treinamento_Foda(\n",
     "    env = env,\n",
     "    rede_neural_hidden = [36,36],\n",
-    "    geracoes = 10,\n",
+    "    geracoes = 20,\n",
     "    n_por_geracao = 30,\n",
     "    n_selecionados = 6,\n",
     "    pais = True,\n",
-    "    learning_rate = 0.01\n",
+    "    learning_rate = 0.1,\n",
+    "    objetivo = 500\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,74 +231,6 @@
    ],
    "source": [
     "print(rede_melhor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "def record_video_neuralnet(env, rede_neural, episodes=3, folder='videos/', prefix='CE-video', epsilon=0.0):\n",
-    "    \"\"\"\n",
-    "    Grava um vídeo a partir de uma política epsilon-greedy definida pela 'qtable' e pelo valor de 'epsilon'.\n",
-    "    - env_name: A string do ambiente cadastrada no gymnasium ou uma instância da classe. Ao final, o ambiente é fechado (função `close()`).\n",
-    "    - qnet: A rede neural que representa a função Q.\n",
-    "    - episodes: Número de episódios completos que serão executados.\n",
-    "    - prefiz: Prefixo do nome dos arquivos de vídeo.\n",
-    "    - folder: Pasta onde os arquivos de vídeo serão salvos.\n",
-    "    - epsilon: Valor do parâmetro da política \"epsilon-greedy\" usada para escolher as ações.\n",
-    "    \"\"\"\n",
-    "    if isinstance(env, str):\n",
-    "        env = gym.make(env, render_mode=\"rgb_array\")\n",
-    "\n",
-    "    rec_env = gym.wrappers.RecordVideo(env, folder, episode_trigger=lambda i : True, name_prefix=prefix)\n",
-    "    \n",
-    "    num_steps = 0\n",
-    "    for epi in range(episodes):\n",
-    "        imagem, _ = rec_env.reset()\n",
-    "        num_steps += 1\n",
-    "        epi_reward = 0.0\n",
-    "        done = False\n",
-    "        while not done:\n",
-    "            action = escolhe_acao(rede_neural, imagem)\n",
-    "            imagem, r, termi, trunc, _ = rec_env.step(action)\n",
-    "            done = termi or trunc\n",
-    "            num_steps += 1\n",
-    "            epi_reward += r\n",
-    "        print(f\"Episode {epi}: {num_steps} steps / return {epi_reward:.2f}\")\n",
-    "    rec_env.close()\n",
-    "    env.close()\n",
-    "\n",
-    "    # Imprimir o caminho completo dos vídeos salvos\n",
-    "    for i in range(episodes):\n",
-    "        video_path = os.path.join(folder, f\"{prefix}{i}.mp4\")\n",
-    "        print(f\"Caminho completo do vídeo {i}: {video_path}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 0: 55 steps / return 54.00\n",
-      "Episode 1: 123 steps / return 67.00\n",
-      "Episode 2: 173 steps / return 49.00\n",
-      "Caminho completo do vídeo 0: videos/CE-video0.mp4\n",
-      "Caminho completo do vídeo 1: videos/CE-video1.mp4\n",
-      "Caminho completo do vídeo 2: videos/CE-video2.mp4\n"
-     ]
-    }
-   ],
-   "source": [
-    "record_video_neuralnet(env, rede_melhor, 3)"
    ]
   }
  ],
