--- a/Computcao Evolutiva/Projeto_02/main.ipynb
+++ b/Computcao Evolutiva/Projeto_02/main.ipynb
@@ -1898,24 +1898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dados salvos em redes_analisadas_1.pkl.\n",
-      "Dados salvos em redes_analisadas_2.pkl.\n",
-      "Dados salvos em redes_analisadas_3.pkl.\n",
-      "Dados salvos em redes_analisadas_4.pkl.\n",
-      "Dados salvos em redes_analisadas_5.pkl.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Salvar cada lista\n",
     "for i, lista in enumerate([redes_analisadas_1, redes_analisadas_2, redes_analisadas_3, redes_analisadas_4, redes_analisadas_5], start=1):\n",
+    "    if lista != redes_analisadas_5:\n",
+    "        lista = [x for _, x in lista]\n",
     "    nome_arquivo = f'redes_analisadas_{i}.pkl'\n",
     "    salvar_dados(lista, nome_arquivo)"
    ]
