--- a/Mineracao_Textos/projeto01/main.ipynb
+++ b/Mineracao_Textos/projeto01/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "      <td>60% menor.</td>\n",
        "      <td>46% menor.</td>\n",
        "      <td>108% maior.</td>\n",
-       "      <td>66% maior.\\n</td>\n",
+       "      <td>66% maior.\\r\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -98,7 +98,7 @@
        "      <td>Ovelha</td>\n",
        "      <td>Veado</td>\n",
        "      <td>Porco</td>\n",
-       "      <td>Vaca\\n</td>\n",
+       "      <td>Vaca\\r\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -109,7 +109,7 @@
        "      <td>II</td>\n",
        "      <td>III</td>\n",
        "      <td>IV</td>\n",
-       "      <td>V\\n</td>\n",
+       "      <td>V\\r\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -129,9 +129,9 @@
        "      <td>De modo geral, a palavra “aromático” invoca as...</td>\n",
        "      <td>ramificações.</td>\n",
        "      <td>insaturações.</td>\n",
-       "      <td>H3\\nH\\nO\\nOH\\nO\\nCH3\\nH\\nO\\nSalicilato de meti...</td>\n",
+       "      <td>H3\\r\\nH\\r\\nO\\r\\nOH\\r\\nO\\r\\nCH3\\r\\nH\\r\\nO\\r\\nSa...</td>\n",
        "      <td>átomos de oxigênio.</td>\n",
-       "      <td>carbonos assimétricos.\\n/\\n</td>\n",
+       "      <td>carbonos assimétricos.\\r\\n/\\r\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>299</th>\n",
@@ -160,11 +160,11 @@
        "      <td>402</td>\n",
        "      <td>0</td>\n",
        "      <td>O sinal sonoro oriundo da queda de um grande b...</td>\n",
-       "      <td>Sinal\\nSinal</td>\n",
+       "      <td>Sinal\\r\\nSinal</td>\n",
        "      <td>A distância L, em metro, entre o barco e a gel...</td>\n",
        "      <td>14 400.</td>\n",
        "      <td>5 240.</td>\n",
-       "      <td>100.\\n/\\n</td>\n",
+       "      <td>100.\\r\\n/\\r\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>302</th>\n",
@@ -175,7 +175,7 @@
        "      <td>Absorção.</td>\n",
        "      <td>Polarização.</td>\n",
        "      <td>Reflexão.</td>\n",
-       "      <td>Refração.\\n/\\nMatemática e suas Tecnologias\\n</td>\n",
+       "      <td>Refração.\\r\\n/\\r\\nMatemática e suas Tecnologia...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,7 +219,7 @@
        "298                                      ramificações.   \n",
        "299                   predação do vírus pela bactéria.   \n",
        "300                                     Autoimunidade.   \n",
-       "301                                       Sinal\\nSinal   \n",
+       "301                                     Sinal\\r\\nSinal   \n",
        "302                                          Difração.   \n",
        "\n",
        "                                         ALTERNATIVA_B  \\\n",
@@ -242,7 +242,7 @@
        "3                                                Veado   \n",
        "4                                                  III   \n",
        "..                                                 ...   \n",
-       "298  H3\\nH\\nO\\nOH\\nO\\nCH3\\nH\\nO\\nSalicilato de meti...   \n",
+       "298  H3\\r\\nH\\r\\nO\\r\\nOH\\r\\nO\\r\\nCH3\\r\\nH\\r\\nO\\r\\nSa...   \n",
        "299   alteração no genótipo do mosquito pela bactéria.   \n",
        "300                        Ativação da resposta inata.   \n",
        "301                                            14 400.   \n",
@@ -263,21 +263,21 @@
        "\n",
        "                                         ALTERNATIVA_E  \n",
        "0    dizimação da população de bentônicos, pelo seu...  \n",
-       "1                                         66% maior.\\n  \n",
+       "1                                       66% maior.\\r\\n  \n",
        "2    Tangencial, apontada no sentido contrário à ve...  \n",
-       "3                                               Vaca\\n  \n",
-       "4                                                  V\\n  \n",
+       "3                                             Vaca\\r\\n  \n",
+       "4                                                V\\r\\n  \n",
        "..                                                 ...  \n",
-       "298                        carbonos assimétricos.\\n/\\n  \n",
+       "298                    carbonos assimétricos.\\r\\n/\\r\\n  \n",
        "299  inserção de material genético do vírus na bact...  \n",
        "300  Desencadeamento de processo anti-inflamatório....  \n",
-       "301                                          100.\\n/\\n  \n",
-       "302      Refração.\\n/\\nMatemática e suas Tecnologias\\n  \n",
+       "301                                      100.\\r\\n/\\r\\n  \n",
+       "302  Refração.\\r\\n/\\r\\nMatemática e suas Tecnologia...  \n",
        "\n",
        "[303 rows x 8 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +328,7 @@
       "CAPIBERIBE, A.; BONILLA, O. A ocupação do Congresso: contra o que \n",
       "lutam os índios? Estudos Avançados, n. 83, 2015 (adaptado).\n",
       "A estratégia comunicativa adotada pelos indígenas, no contexto em pauta, teve por efeito\n",
+      "inserir as comunidades no mercado global.\n",
       "1\n"
      ]
     }
@@ -335,19 +336,105 @@
    "source": [
     "quest = 100\n",
     "print(df['ENUNCIADO_QUESTAO'][quest])\n",
+    "print(df['ALTERNATIVA_C'][quest])\n",
     "print(df['LABEL_QUESTAO'][quest])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Spliting into train and test to evaluate the model\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "stopwords = ['a', 'à', 'adeus', 'agora', 'aguenta', 'ah', 'ai', 'ainda', 'além', 'algo', 'algum', 'alguma', 'algumas', 'alguns', 'ali', 'além', 'ambos', 'antes', \n",
+    "             'apenas', 'apoio', 'após', 'aquela', 'aquelas', 'aquele', 'aqueles', 'aqui', 'aquilo', 'as', 'às', 'assim', 'até', 'atrás', 'através', 'atual', 'àquele', \n",
+    "             'àqueles', 'àquela', 'àquelas', 'bem', 'bom', 'brevemente', 'cada', 'caminho', 'catorze', 'cedo', 'cento', 'certamente', 'certeza', 'cima', 'cinco', 'coisa', \n",
+    "             'com', 'como', 'comprido', 'conhecido', 'conselho', 'conselho', 'contigo', 'contra', 'corrente', 'custa', 'da', 'dá', 'daquela', 'daquelas', 'daquele', 'daqueles', \n",
+    "             'dar', 'das', 'de', 'debaixo', 'demais', 'dentro', 'depois', 'desde', 'dessa', 'dessas', 'desse', 'desses', 'desta', 'destas', 'deste', 'destes', 'deve', 'deverá', \n",
+    "             'dez', 'dezanove', 'dezasseis', 'dezassete', 'dezoito', 'dia', 'diante', 'direita', 'diz', 'dizem', 'dizer', 'do', 'dois', 'dos', 'doze', 'duas', 'dúvida', 'e', 'é', \n",
+    "             'ela', 'elas', 'ele', 'eles', 'em', 'embora', 'entre', 'então', 'era', 'essa', 'essas', 'esse', 'esses', 'esta', 'está', 'estar', 'estas', 'estava', 'este', 'esteja', \n",
+    "             'estejam', 'estejamos', 'estes', 'esteve', 'estive', 'estivemos', 'estiver', 'estivera', 'estiveram', 'estiverem', 'estivermos', 'estivesse', 'estivessem', 'estivéramos', \n",
+    "             'estivéssemos', 'eu', 'exemplo', 'faço', 'falta', 'favor', 'faz', 'fazeis', 'fazem', 'fazemos', 'fazer', 'fazes', 'fez', 'fim', 'final', 'foi', 'fomos', 'for', 'fora', \n",
+    "             'foram', 'forem', 'forma', 'foste', 'fostes', 'fui', 'geral', 'grande', 'grandes', 'grupo', 'há', 'hoje', 'hora', 'horas', 'isso', 'isto', 'já', 'lá', 'lado', 'local', \n",
+    "             'logo', 'longe', 'lugar', 'maior', 'maioria', 'mais', 'mal', 'mas', 'máximo', 'me', 'meio', 'menor', 'menos', 'mês', 'meses', 'mesmo', 'meu', 'meus', 'mil', 'minha', \n",
+    "             'minhas', 'momento', 'muito', 'muitos', 'na', 'nada', 'naquela', 'naquelas', 'naquele', 'naqueles', 'nas', 'nem', 'nenhum', 'nenhuma', 'nenhumas', 'nenhuns', 'nessa', \n",
+    "             'nessas', 'nesse', 'nesses', 'nesta', 'nestas', 'neste', 'nestes', 'ninguém', 'no', 'noite', 'nome', 'nos', 'nós', 'nossa', 'nossas', 'nosso', 'nossos', 'nova', 'novas', \n",
+    "             'nove', 'novo', 'novos', 'num', 'numa', 'número', 'números', 'nunca', 'o', 'obra', 'obrigada', 'obrigado', 'oitava', 'oitavo', 'oito', 'onde', 'ontem', 'onze', 'os', 'ou', \n",
+    "             'outra', 'outras', 'outro', 'outros', 'para', 'parece', 'parte', 'partir', 'paucas', 'pela', 'pelas', 'pelo', 'pelos', 'perto', 'pode', 'pôde', 'podem', 'poder', 'poderá', \n",
+    "             'podia', 'põe', 'põem', 'ponto', 'pontos', 'por', 'porque', 'porquê', 'pouca', 'pouco', 'povo', 'primeira', 'primeiro', 'própria', 'próprias', 'próprio', 'próprios', \n",
+    "             'quais', 'quáis', 'qual', 'qualquer', 'quando', 'quanto', 'quantos', 'quarta', 'quarto', 'quatro', 'que', 'quê', 'quem', 'quer', 'quereis', 'querem', 'queremas', 'queres', \n",
+    "             'quero', 'questão', 'quinta', 'quinto', 'quinze', 'relação', 'sabe', 'saber', 'se', 'segunda', 'segundo', 'sei', 'seis', 'sem', 'sempre', 'ser', 'será', 'serão', 'seremos', \n",
+    "             'si', 'sido', 'sob', 'sobre', 'sou', 'sua', 'suas', 'tal', 'também', 'tanto', 'tarde', 'te', 'tem', 'têm', 'temos', 'tempo', 'tendes', 'tendo', 'tenha', 'tenham', \n",
+    "             'tenhamos', 'tenho', 'tens', 'tentar', 'tentaram', 'tentámos', 'tente', 'tentei', 'tentemos', 'tentes', 'ter', 'terá', 'terão', 'teremos', 'teu', 'teus', 'teve', 'ti', \n",
+    "             'tido', 'tinha', 'tinham', 'tínhamos', 'tive', 'tivemos', 'tiver', 'tivera', 'tiveram', 'tiverem']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "texto1: O protagonismo indígena vem optando por uma estratégia de “des-invisibilização”,\n",
+      "valendo-se da dinâmica das novas tecnologias. Em outubro de 2012, após receberem\n",
+      "uma liminar lhes negando o direito a permanecer em suas terras, os Guarani de Pyelito\n",
+      "Kue divulgaram uma carta na qual se dispunham a morrer, mas não a sair de suas terras.\n",
+      "Esse fato foi amplamente divulgado, gerando uma grande mobilização na internet, que\n",
+      "levou milhares de pessoas a escolherem seu lado, divulgando a hashtag\n",
+      "“#somostodosGuarani-Kaiowá” ou acrescentando o sobrenome Guarani-Kaiowá a seus\n",
+      "nomes nos perfis das principais redes sociais.\n",
+      "CAPIBERIBE, A.; BONILLA, O. A ocupação do Congresso: contra o que \n",
+      "lutam os índios? Estudos Avançados, n. 83, 2015 (adaptado).\n",
+      "A estratégia comunicativa adotada pelos indígenas, no contexto em pauta, teve por efeito\n",
+      "\n",
+      "texto2: O protagonismo indígena vem optando por uma estratégia de “des-invisibilização”,.+valendo-se da dinâmica das novas tecnologias. Em outubro de 2012, após receberem.+uma liminar lhes negando o direito a permanecer em suas terras, os Guarani de Pyelito.+Kue divulgaram uma carta na qual se dispunham a morrer, mas não a sair de suas terras..+Esse fato foi amplamente divulgado, gerando uma grande mobilização na internet, que.+levou milhares de pessoas a escolherem seu lado, divulgando a hashtag.+“#somostodosGuarani-Kaiowá” ou acrescentando o sobrenome Guarani-Kaiowá a seus.+nomes nos perfis das principais redes sociais..+CAPIBERIBE, A.; BONILLA, O. A ocupação do Congresso: contra o que .+lutam os índios? Estudos Avançados, n. 83, 2015 (adaptado)..+A estratégia comunicativa adotada pelos indígenas, no contexto em pauta, teve por efeito\n",
+      "\n",
+      "texto3: o protagonismo indígena vem optando por uma estratégia de “des-invisibilização”,.+valendo-se da dinâmica das novas tecnologias. em outubro de 2012, após receberem.+uma liminar lhes negando o direito a permanecer em suas terras, os guarani de pyelito.+kue divulgaram uma carta na qual se dispunham a morrer, mas não a sair de suas terras..+esse fato foi amplamente divulgado, gerando uma grande mobilização na internet, que.+levou milhares de pessoas a escolherem seu lado, divulgando a hashtag.+“#somostodosguarani-kaiowá” ou acrescentando o sobrenome guarani-kaiowá a seus.+nomes nos perfis das principais redes sociais..+capiberibe, a.; bonilla, o. a ocupação do congresso: contra o que .+lutam os índios? estudos avançados, n. 83, 2015 (adaptado)..+a estratégia comunicativa adotada pelos indígenas, no contexto em pauta, teve por efeito\n",
+      "\n",
+      "texto: o protagonismo indígena vem optando por uma estratégia de “des-invisibilização”,.+valendo-se da dinâmica das novas tecnologias. em outubro de 2012, após receberem.+uma liminar lhes negando o direito a permanecer em suas terras, os guarani de pyelito.+kue divulgaram uma carta na qual se dispunham a morrer, mas não a sair de suas terras..+esse fato foi amplamente divulgado, gerando uma grande mobilização na internet, que.+levou milhares de pessoas a escolherem seu lado, divulgando a hashtag.+“#somostodosguarani-kaiowá” ou acrescentando o sobrenome guarani-kaiowá a seus.+nomes nos perfis das principais redes sociais..+capiberibe, a.; bonilla, o. a ocupação do congresso: contra o que .+lutam os índios? estudos avançados, n. 83, 2015 (adaptado)..+a estratégia comunicativa adotada pelos indígenas, no contexto em pauta, teve por efeito\n",
+      "\n",
+      "tokens: ['o', 'protagonismo', 'indígena', 'vem', 'optando', 'por', 'uma', 'estratégia', 'de', 'des', 'invisibilização', 'valendo', 'se', 'da', 'dinâmica', 'das', 'novas', 'tecnologias', 'em', 'outubro', 'de', '2012', 'após', 'receberem', 'uma', 'liminar', 'lhes', 'negando', 'o', 'direito', 'a', 'permanecer', 'em', 'suas', 'terras', 'os', 'guarani', 'de', 'pyelito', 'kue', 'divulgaram', 'uma', 'carta', 'na', 'qual', 'se', 'dispunham', 'a', 'morrer', 'mas', 'não', 'a', 'sair', 'de', 'suas', 'terras', 'esse', 'fato', 'foi', 'amplamente', 'divulgado', 'gerando', 'uma', 'grande', 'mobilização', 'na', 'internet', 'que', 'levou', 'milhares', 'de', 'pessoas', 'a', 'escolherem', 'seu', 'lado', 'divulgando', 'a', 'hashtag', 'somostodosguarani', 'kaiowá', 'ou', 'acrescentando', 'o', 'sobrenome', 'guarani', 'kaiowá', 'a', 'seus', 'nomes', 'nos', 'perfis', 'das', 'principais', 'redes', 'sociais', 'capiberibe', 'a', 'bonilla', 'o', 'a', 'ocupação', 'do', 'congresso', 'contra', 'o', 'que', 'lutam', 'os', 'índios', 'estudos', 'avançados', 'n', '83', '2015', 'adaptado', 'a', 'estratégia', 'comunicativa', 'adotada', 'pelos', 'indígenas', 'no', 'contexto', 'em', 'pauta', 'teve', 'por', 'efeito']\n",
+      "\n",
+      "tokens: ['protagonismo', 'indígena', 'optando', 'estratégia', 'invisibilização', 'valendo', 'dinâmica', 'tecnologias', 'outubro', 'receberem', 'liminar', 'lhes', 'negando', 'direito', 'permanecer', 'terras', 'guarani', 'pyelito', 'divulgaram', 'carta', 'dispunham', 'morrer', 'sair', 'terras', 'fato', 'amplamente', 'divulgado', 'gerando', 'mobilização', 'internet', 'levou', 'milhares', 'pessoas', 'escolherem', 'divulgando', 'hashtag', 'somostodosguarani', 'kaiowá', 'acrescentando', 'sobrenome', 'guarani', 'kaiowá', 'seus', 'nomes', 'perfis', 'principais', 'redes', 'sociais', 'capiberibe', 'bonilla', 'ocupação', 'congresso', 'lutam', 'índios', 'estudos', 'avançados', 'adaptado', 'estratégia', 'comunicativa', 'adotada', 'indígenas', 'contexto', 'pauta', 'efeito']\n",
+      "\n",
+      "protagonismo indígena optando estratégia invisibilização valendo dinâmica tecnologias outubro receberem liminar lhes negando direito permanecer terras guarani pyelito divulgaram carta dispunham morrer sair terras fato amplamente divulgado gerando mobilização internet levou milhares pessoas escolherem divulgando hashtag somostodosguarani kaiowá acrescentando sobrenome guarani kaiowá seus nomes perfis principais redes sociais capiberibe bonilla ocupação congresso lutam índios estudos avançados adaptado estratégia comunicativa adotada indígenas contexto pauta efeito\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "from nltk.tokenize.regexp import RegexpTokenizer\n",
     "\n",
-    "train, test = train_test_split(df, test_size=0.2)"
+    "def preprocess(text):\n",
+    "    print(f\"texto1: {text}\\n\")\n",
+    "    # remover pontuações\n",
+    "    text   = text.translate(string.punctuation)\n",
+    "    print(f\"texto2: {text}\\n\")\n",
+    "    # converter para lowercase\n",
+    "    text = text.lower()\n",
+    "    print(f\"texto3: {text}\\n\")\n",
+    "\n",
+    "    # tokenizar o texto em palavras\n",
+    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "    tokens = tokenizer.tokenize(text.lower())\n",
+    "\n",
+    "    print(f\"texto: {text}\\n\")\n",
+    "    print(f\"tokens: {tokens}\\n\")\n",
+    "\n",
+    "    # filtrar palavras\n",
+    "    tokens = [word for word in tokens\n",
+    "              if word not in stopwords       # descartar stopwords\n",
+    "                  and len(word) > 3          # descartar palavras com menos de 3 caracteres\n",
+    "                  and not word[0].isdigit()] # descartar tokens contendo apenas numeros\n",
+    "    \n",
+    "    print(f\"tokens: {tokens}\\n\")\n",
+    "    \n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "print(preprocess(df['ENUNCIADO_QUESTAO'][quest]))\n"
    ]
   }
  ],
@@ -367,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
